# CR_DR

./: .gitignore  BENCHMARKS.md  CHUNKED_TALLY_DESIGN.md  Cargo.toml  FOLDING_STACK_RESEARCH.md  GCP_RUNBOOK.md  HANDOFF.md  README.md  TIER3_DESIGN.md  TIER3_FEASIBILITY.md  TIER3_STATUS.md  package.json
benches/: prover.rs
circuits/components/: ballot_validity.circom  duplicate_first_valid.circom  duplicate_sorted.circom  duplicate_sorted_out.circom  encryption_decrypt.circom  filter_and_tally_mpc.circom  filter_and_tally_mpc_large.circom  lagrange_combine.circom  merkle_membership.circom  poseidon_hashes.circom  record_chain.circom  signature_verify.circom  sort_records.circom  sort_records_wide.circom  tally_accumulator.circom  tally_accumulator_out.circom
circuits/input_examples/: fake_before_real_input.json  small_valid_input.json
circuits/main/: cast_proof.circom  filter_and_tally.circom  filter_and_tally_cast.circom  filter_and_tally_large_mpc.circom  filter_and_tally_medium.circom  filter_and_tally_medium_mpc.circom  filter_and_tally_medium_mpc_naive.circom  filter_and_tally_medium_naive.circom  filter_and_tally_mid512_mpc.circom  filter_and_tally_small.circom  (+17 more)
scripts/: compile_circuits.sh  install_circom_deps.sh  install_rapidsnark.sh  measure_campaign.sh  prove.sh  setup_groth16.sh  verify.sh  widen_campaign.sh
src/: errors.rs  lib.rs  main.rs  types.rs
tests/: cast_tests.rs  chaff_tests.rs  chunked_tests.rs  chunked_transcript_tests.rs  dispute_tests.rs  duplicate_rule_tests.rs  fake_compliance_tests.rs  filter_and_tally_tests.rs  groth16_integration_tests.rs  negative_attack_tests.rs  preprocessing_tests.rs  setup_tests.rs  soft_safety_tests.rs  threshold_tests.rs  tier3_tests.rs  voting_tests.rs  zk_statement_tests.rs
(+34 files in other folders)
