[package]
name = "cr_dr"
version = "0.1.0"
edition = "2021"
description = "Research reference implementation of Coercion-Resistant Voting with Private Dispute Resolution (construction only, not the CR game)."
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bn254 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-serialize = "0.4.2"
light-poseidon = "0.2.0"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
hex = "0.4"
num-bigint = "0.4"

[dev-dependencies]
proptest = "1.4"
tempfile = "=3.10.1"

[[bin]]
name = "cr_dr_demo"
path = "src/main.rs"

[[bin]]
name = "gen_example_inputs"
path = "src/bin/gen_example_inputs.rs"
